--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.15"
   }
 }
