--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "@typeform/embed": "^0.25.6",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-collapse": "^5.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.11.2",
     "react-scripts": "4.0.0",
     "react-typeform-embed": "^0.2.1",
     "reactstrap": "^8.7.1",
